syntax = "proto3";

package mizer.programmer;

import "fixtures.proto";

service ProgrammerApi {
  rpc SubscribeToProgrammer (EmptyRequest) returns (stream ProgrammerState) {}
  rpc SelectFixtures (SelectFixturesRequest) returns (EmptyResponse) {}
  rpc UnselectFixtures (UnselectFixturesRequest) returns (EmptyResponse) {}
  rpc Clear (EmptyRequest) returns (EmptyResponse) {}
  rpc Highlight (HighlightRequest) returns (EmptyResponse) {}
  rpc Next (EmptyRequest) returns (EmptyResponse) {}
  rpc Previous (EmptyRequest) returns (EmptyResponse) {}
  rpc Set (EmptyRequest) returns (EmptyResponse) {}
}

message ProgrammerState {
  repeated mizer.fixtures.FixtureId fixtures = 1;
  repeated mizer.fixtures.FixtureId active_fixtures = 2;
  repeated uint32 active_groups = 3;
  FixtureSelection selection = 4;
  repeated ProgrammerChannel controls = 5;
  bool highlight = 6;
  uint32 block_size = 7;
  uint32 groups = 8;
  uint32 wings = 9;
  repeated EffectProgrammerState effects = 10;
  bool offline = 11;
  repeated FixtureValue fixture_values = 12;
}

message FixtureValue {
  mizer.fixtures.FixtureId fixture = 1;
  optional double intensity = 2;
  optional mizer.fixtures.ColorMixerChannel color = 3;
  optional double pan = 4;
  optional double tilt = 5;
}

message FixtureSelection {
  repeated GroupedFixtureList fixtures = 1;

  message GroupedFixtureList {
    repeated mizer.fixtures.FixtureId fixtures = 1;
  }
}

message ProgrammerChannel {
  repeated mizer.fixtures.FixtureId fixtures = 1;
  mizer.fixtures.FixtureControl control = 2;
  oneof value {
    double fader = 3;
    mizer.fixtures.ColorMixerChannel color = 4;
    GenericValue generic = 5;
    PresetId preset = 6;
  }

  enum ColorChannel {
    RED = 0;
    GREEN = 1;
    BLUE = 2;
  }

  message GenericValue {
    string name = 1;
    double value = 2;
  }
}

message EffectProgrammerState {
  uint32 effect_id = 1;
  double effect_rate = 2;
  optional double effect_offset = 3;
}

message WriteEffectRateRequest {
  uint32 effect_id = 1;
  double effect_rate = 2;
}

message WriteEffectOffsetRequest {
  uint32 effect_id = 1;
  optional double effect_offset = 2;
}

message WriteControlRequest {
  mizer.fixtures.FixtureControl control = 1;
  oneof value {
    double fader = 2;
    mizer.fixtures.ColorMixerChannel color = 3;
    GenericValue generic = 4;
  }

  message GenericValue {
    string name = 1;
    double value = 2;
  }
}

message SelectFixturesRequest {
  repeated mizer.fixtures.FixtureId fixtures = 1;
}

message UnselectFixturesRequest {
  repeated mizer.fixtures.FixtureId fixtures = 1;
}

message EmptyRequest {
}
message EmptyResponse {
}

message HighlightRequest {
  bool highlight = 1;
}

message StoreRequest {
  uint32 sequence_id = 1;
  Mode store_mode = 2;
  optional uint32 cue_id = 3;

  enum Mode {
    OVERWRITE = 0;
    MERGE = 1;
    ADD_CUE = 2;
  }
}
message StoreResponse {
}

message StorePresetRequest {
  oneof target {
    PresetId existing = 1;
    NewPreset new_preset = 2;
  }

  message NewPreset {
    PresetId.PresetType type = 1;
    optional PresetTarget target = 2;
    optional string label = 3;
  }
}

message RenamePresetRequest {
  PresetId id = 1;
  string label = 2;
}

message PresetsRequest {
}

message PresetId {
  uint32 id = 1;
  PresetType type = 2;

  enum PresetType {
    INTENSITY = 0;
    SHUTTER = 1;
    COLOR = 2;
    POSITION = 3;
  }
}

enum PresetTarget {
  PRESET_TARGET_UNIVERSAL = 0;
  PRESET_TARGET_SELECTIVE = 1;
}

message Presets {
  repeated Preset intensities = 1;
  repeated Preset shutters = 2;
  repeated Preset colors = 3;
  repeated Preset positions = 4;
}

message Preset {
  PresetId id = 1;
  PresetTarget target = 2;
  optional string label = 3;
  oneof value {
    double fader = 4;
    Color color = 5;
    Position position = 6;
  }

  message Color {
    double red = 1;
    double green = 2;
    double blue = 3;
  }

  message Position {
    optional double tilt = 1;
    optional double pan = 2;
  }
}

message CallPresetResponse {
}

message GroupsRequest {
}
message Groups {
  repeated Group groups = 1;
}

message Group {
  uint32 id = 1;
  string name = 2;
}

message SelectGroupRequest {
  uint32 id = 1;
}

message SelectGroupResponse {
}

message AddGroupRequest {
  string name = 1;
}

message RenameGroupRequest {
  uint32 id = 1;
  string name = 2;
}

message AssignFixturesToGroupRequest {
  uint32 id = 1;
  repeated mizer.fixtures.FixtureId fixtures = 2;
  StoreGroupMode mode = 3;
}

message AssignFixtureSelectionToGroupRequest {
  uint32 id = 1;
  StoreGroupMode mode = 2;
}

enum StoreGroupMode {
  STORE_GROUP_MODE_OVERWRITE = 0;
  STORE_GROUP_MODE_MERGE = 1;
  STORE_GROUP_MODE_SUBTRACT = 2;
}

message AssignFixturesToGroupResponse {
}
